[package]
name = "sact"
version = "0.1.0"
edition = "2021"
license="MIT"
authors = ["Dj-Codeman <dwhitfield@ramfield.net>"]
description = "sudo/doas alternative"
repository = "https://github.com/Dj-Codeman/sact"
keywords = ["cli", "sudo", "root", "linux", "gnu"]
categories = ["command-line-interface", "command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
libc = "0.2.139"
serde = { version = "1.0.126", features = ["derive"] }
